themes/evolve/lessc/PD/PD.less
/* ... */
body.page-node{
    #section-content-top{
        .container{
            .row{
                #block-block-241{
                    @media all and (max-width: @larger-desktop-width){
                        padding: 0 50px;
                    }
                    @media all and (max-width: @tablet-width){
                        padding: 0 25px;
                    }

                    #pd-search-results{
                        i{
                            color: #5E6167;
                        }
                        .flex-cell{
                            position: relative;
                            transition: 0.1s linear;
                            background: none;
                            &:hover{
                                background: rgba(0,0,0,0.02);
                            }
                            &.heading-row:hover{
                                background: none;
                            }
                        }
                        @media all and (max-width: @larger-tablet-width){
                            border-top: 1px solid #d3d4d5;
                            .heading-row{
                                display: none;
                            }
                            .flex-cell{
                                flex-direction: column;
                                .flex-col-3{
                                    width: 90%;
                                    margin-bottom: 20px;
                                }
                                .flex-col-1, .flex-col-2{
                                    width: 50%;
                                    font-size: 0.85em;
                                    text-align: left;
                                }
                                .pd-status{
                                    position: absolute;
                                    bottom: 5%;
                                    right: 5%; 
                                    width: 10%;
                                    font-size: 1em;
                                    text-align: center;
                                }
                            }
                        }
                        @media all and (max-width: @phone-width){
                            .flex-col-1, .flex-col-2{
                                width: 80%;
                                font-size: 0.9em;
                            }
                        }
                        .pd-detail-city{
                            word-break: break-all;
                            -ms-word-break: break-all;
                        }
                        .pd-header-mobile{
                            display: inline-block;
                            font-weight: 400;
                            padding-right: 5px;
                            @media all and (min-width: @larger-tablet-width) {
                                display: none;
                            }
                        }
                    }
                    @media all and (max-width: @larger-tablet-width){
                        .pager{
                            width: 100%;
                        }
                        .page-size-setting{
                            width: 100%;
                            .pageSetting{
                                text-align: left;
                            }
                        }
                    }
                   
                }
            }
        }

    }
}


/*----------------PREDEFINED COLORS-------------------*/
@blue: #009fda;


/*----------------PD SEARCH RESULT-------------------*/
#block-block-240{
    padding: 50px 0px 80px!important;
    background-position: 50% 1% !important;
    @media all and (max-width: @desktop-width) {
        background-position: 60% 1% !important;
    }
    @media all and (max-width: @larger-phone-width) {
        background-position: 65% 1% !important;
    }
}
/* ... */

